<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme"
            app:popupTheme="@style/AppTheme">

            <ImageView
                android:id="@+id/main_drawer_button"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:contentDescription="@string/drawer"
                android:src="@drawable/ic_menu_black_48dp"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/main_user_profile"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/space_xl"
                android:contentDescription="@string/view_profile"
                android:src="@drawable/ic_account_circle_black_48dp"
                android:tint="@color/white" />

        </android.support.v7.widget.Toolbar>

        <!-- The main content view -->
        <RelativeLayout
            android:id="@+id/main_content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- The navigation drawer -->
    <!--
    <ListView
        android:id="@+id/main_left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />
    -->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_drawer_recycler"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:choiceMode="singleChoice"
        android:scrollbars="vertical" />
</android.support.v4.widget.DrawerLayout>