...
                    android:layout_marginTop="@dimen/space_l"
                    android:contentDescription="@string/fish"
                    android:src="@mipmap/ic_launcher"
                    android:tint="@color/coral" />

                <TextView
                    android:id="@+id/profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/space_s"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_size_subtitle" />
...
