<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context="com.example.jcaruso.fishproject.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="@dimen/img_size_m"
            android:layout_height="@dimen/img_size_m"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/space_xl"
            android:layout_marginTop="@dimen/space_3xl"
            android:contentDescription="@string/fish"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space_m">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginEnd="@dimen/space_m"
                android:contentDescription="@string/username_icon"
                android:src="@drawable/ic_account_circle_black_48dp"
                android:tint="@color/medium_grey" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space_m">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginEnd="@dimen/space_m"
                android:contentDescription="@string/password_icon"
                android:src="@drawable/ic_lock_black_48dp"
                android:tint="@color/medium_grey" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/login_signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:text="@string/signin"
            android:textColor="@color/coral"
            android:visibility="invisible" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/space_l">

            <fr.castorflex.android.circularprogressbar.CircularProgressBar
                android:id="@+id/login_login_progress"
                android:layout_width="@dimen/space_xl"
                android:layout_height="@dimen/space_xl"
                android:layout_gravity="center"
                android:indeterminate="true"
                app:cpb_color="@color/coral"
                app:cpb_stroke_width="@dimen/circular_progress_bar_stroke_width" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                app:backgroundTint="@color/coral" />


        </FrameLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
